Pull request #348: AG-12324 fix modal title
Merge in EXTENSIONS/vpn-extension from AG-12324 to master

Squashed commit of the following:

commit 1daf845d181295993c7365b4275a717152714cbc
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 12:47:14 2022 +0300

    AG-12324 fix modal title

commit 49ceac4e93e944e1b531793d4821aa806b5a2937
Merge: 1427cfb6 0f5aee57
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 12:41:45 2022 +0300

    Merge branch 'master' into AG-12324

commit 1427cfb6e0633500d873d26d189e22be74d6a95e
Merge: 3d6187e0 b8be1546
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 11:54:58 2022 +0300

    Merge branch 'master' into AG-12324

commit 3d6187e081cd3b638f1cc0fe8a755c25ed286db6
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jan 20 11:28:02 2022 +0300

    AG-12324 fix line-height

--- a/src/options/components/Exclusions/ExclusionsModal/exclusions-modal.pcss
+++ b/src/options/components/Exclusions/ExclusionsModal/exclusions-modal.pcss
@@ -1,10 +1,10 @@
 .modal {
     &__title {
         letter-spacing: 0;
-        margin: 10px 0 25px;
-        font-size: 40px;
-        font-weight: bold;
-        line-height: 30px;
+        margin: 10px 0 10px;
+        font-size: 32px;
+        font-weight: 600;
+        line-height: 40px;
     }
 
     &__mode-selectors {
